# mxcubeweb

./: .babelrc  .coveragerc  .eslintrc  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint.yaml  Beamline.html  CONTRIBUTING.md  Collection.html  Login.html  MANIFEST  Queue.html  README.md  Sample.html  SampleCentring.html  backend_server.js.example  conda-environment-dev.yml  conda-environment.yml  conda-install.sh  config.gui.prod.js  debian-install.sh  genindex.html  http-routingtable.html  index.html  meta.yaml  mxcube-server-config.yml  mxcube.py  mxcube3  mxcube3-server  mxcubeweb-server  npm-shrinkwrap.json  objects.inv  package-lock.json  package.json  pyproject.toml  (+16 more)
.github/workflows/: build_and_test.yml  bump_version_and_tag.yml  codeql-analysis.yml  e2e-test.yml  format_and_lint_ui.yml  pages.yaml  pre-commit.yaml  pre-commit.yml  ui.yml
__tests__/: queue.test.js
_sources/: Beamline.txt  SampleCentring.txt  index.txt
demo/: aperture.xml  beamline_actions.xml  beamline_config.yml  beamstop.xml  beamstop_alignment_z.xml  chip_definition.json  ednaparams.xml  fast_shutter.xml  lims.xml  lims_rest.xml  machine_info.xml  md_camera.xml  microscope.xml  mxcollect.xml  oxford_chip_def.json  plate_manipulator.xml  pyispyb.xml  queue.xml  queue_model.xml  resolution.xml  safety_shutter.xml  sample_view.xml  sc_mockup.xml  scan_mockup.xml  session.xml  udiff_backlight.xml  udiff_frontlight.xml  udiff_kappaphi.xml  udiff_lightmot.xml  udiff_omega.xml  udiff_phiy.xml  udiff_sampx.xml  xray_centring2.yml  xrf.xml
demo.yaml/: aperture.yaml  beam.yaml  beamline_actions.yaml  beamline_config.yml  beamstop.yaml  beamstop_alignment_x.yaml  capillary.yaml  characterisation.yaml  cryo.yaml  data_publisher.yaml  detector.yaml  dtox.yaml  ednaparams.yaml  energy.yaml  energy_scan.yaml  fast_shutter.yaml  flux.yaml  lims.yaml  lims_rest.yaml  machine_info.yaml  md_camera.yaml  minidiff.yaml  mxcollect.yaml  queue_manager.yaml  queue_model.yaml  resolution.yaml  safety_shutter.yaml  sample_changer.yaml  sample_changer_maint.yaml  sample_view.yaml  session.yaml  slits.yaml  transmission.yaml  udiff_backlight.yaml  udiff_backlightswitch.yaml  udiff_frontlight.yaml  udiff_frontlightswitch.yaml  udiff_kappa.yaml  udiff_kappaphi.yaml  udiff_omega.yaml  (+9 more)
demo.yaml/gphl/: gphl-setup.yaml
demo.yaml/mxcube-web/: server.yaml  ui.yaml
demo/gphl/: gphl-setup.yml  gphl-workflow.yml  session.xml
demo/mxcube-web/: server.yaml  ui.yaml
docker/: Dockerfile  README.md  conda-install.sh  debian-install.sh  docker-compose.yml  docker-entrypoint.sh  mxcube
docs/: Makefile  conf.py
docs/source/: Collection.rst  Login.rst  Queue.rst  Sample.rst  SampleCentring.rst  conf.py  contents.rst  index.rst
mxcube3/: .babelrc  __init__.py  app.py  blcontrol.py  config.py  logging_handler.py  mxcube.py  remote_access.py  server.py  state_storage.py  version.py
mxcube3/core/: beamline.py  beamline_adapter.py  beamline_setup.py  beamlineutils.py  chat.py  component.py  lims.py  limsutils.py  loginutils.py  models.py  queue.py  qutils.py  samplechanger.py  sampleview.py  (+8 more)
mxcubeweb/: __init__.py  __version__.py  app.py  config.py  logging_handler.py  server.py  server.py.orig  state_storage.py
src/: __init__.py
test/: .babelrc  fixture.py  input_parameters.py  populateQueue.sh  test_authn.py  test_beamline_routes.py  test_diffractometer_routes.py  test_lims_routes.py  test_login_routes.py  test_mxcube3.py  test_queue_routes.py  test_ra_routes.py  test_samplechanger_routes.py
ui/: .env  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  cypress.config.js  index.html  less-watcher.config.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+1070 files in other folders)
